<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MBC_DisciplineActivity!</string>
    <string name="app_name">MBC_Discipline</string>
    <string name="classwrongrec">班違規記錄</string>
    <string name="classstudwrongrec">班學生違規記錄</string>
    <string name="return_home">返回主頁</string>
    <string name="wrongtype">違規</string>
    <string name="wrongclass">班別</string>
    <string name="wrongstudcnt">人數</string>
    <string name="wrongsubmit">提交</string>
    <string-array name="class_arr">
        <item>初一信_SG1A</item>
<item>初一望_SG1B</item>
<item>初一愛_SG1C</item>
<item>初一善_SG1D</item>
<item>初二信_SG2A</item>
<item>初二望_SG2B</item>
<item>初二愛_SG2C</item>
<item>初二善_SG2D</item>
<item>初三信_SG3A</item>
<item>初三望_SG3B</item>
<item>初三愛_SG3C</item>
<item>初三善_SG3D</item>
<item>高一信_SC1A</item>
<item>高一望_SC1B</item>
<item>高一愛_SC1C</item>
<item>高一善_SC1D</item>
<item>高一樂_SC1E</item>
<item>高二信_SC2A</item>
<item>高二望_SC2B</item>
<item>高二愛_SC2C</item>
<item>高二善_SC2D</item>
<item>高二樂_SC2E</item>
<item>高三信_SC3A</item>
<item>高三望_SC3B</item>
<item>高三愛_SC3C</item>
<item>高三善_SC3D</item>
<item>高三樂_SC3E</item>

    </string-array>
    <string-array name="wrong_type_arr">
    <item>1_學習_遲到</item>
<item>2_學習_欠功課</item>
<item>3_學習_曠課</item>
<item>4_學習_連續曠課一星期</item>
<item>5_學習_欠帶書</item>
<item>6_學習_抄襲功課</item>
<item>7_學習_曠課(1,3節)</item>
<item>8_學習_上午忘記拍卡</item>
<item>9_學習_下午忘記拍卡</item>
<item>11_課堂_上課睡覺</item>
<item>12_課堂_刻意不專注</item>
<item>13_課堂_擾亂秩序</item>
<item>14_課堂_上課不專心</item>
<item>15_課堂_課間遲到</item>
<item>16_課堂_課室飲食</item>
<item>17_課堂_上課多言</item>
<item>18_課堂_擅自離隊</item>
<item>19_課堂_留堂偷走</item>
<item>20_課堂_課堂使用手機</item>
<item>21_課堂_課間使用手機</item>
<item>102_品德_欠公德心</item>
<item>103_品德_藏有或吸食香煙</item>
<item>104_品德_對師長不敬</item>
<item>105_品德_欺詐行為</item>
<item>106_品德_作弊</item>
<item>107_品德_盜竊</item>
<item>108_品德_校園欺壓及暴力</item>
<item>109_品德_刑事</item>
<item>110_品德_講粗言穢語</item>
<item>111_品德_校服</item>
<item>112_品德_儀容</item>
<item>113_品德_學生證</item>
<item>114_品德_對師長態度欠佳</item>
<item>115_品德_其它違規</item>
<item>116_品德_違反測/考紀律</item>
<item>300_其他_週六遲到</item>
<item>301_其他_週六曠課</item>
<item>302_其他_課外活動缺席</item>
<item>303_其他_團隊訓練缺席</item>
    
    
    </string-array>
<string name="STUDENT_REF">學生</string>
<string name="classwrong_rec_list">班_違規_列表</string>
<string name="classstudwrong_rec_list">學生_違規_列表</string>
<string name="wrgnote"></string>
<string name="wrgdesc"></string>

</resources>
